--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,8 +2,37 @@
 @import "libs";
 @import "fonts";
 
+// default styles
+body {
+  font-family: "Montserrat", sans-serif;
+  color: $black;
+}
 
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
+a {
+  text-decoration: none;
+}
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+figure {
+  margin: 0;
+}
 
 @import "media";
